--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-  --selected: #6feaf6;
-  --text-color: #777;
-  --white: #fff;
-  --dark-text: #1c2042;
+  --purple-color: #7f5a83;
+  --violet-color: #0d324d;
+  --white-color: #ffffff;
+  --blue-color: #1c2042;
 }
 
-* {
+*,
+*:before,
+*:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -19,4 +21,8 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
+  height: 100vh;
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+  color: var(--blue-color);
 }
